--- a/frontend/浏览器.md
+++ b/frontend/浏览器.md
@@ -11,6 +11,14 @@
 -之后是渲染页面，因为HTML文件会含有图片、视频、音频等资源，在解析DOM的过程中，遇到这些都会进行并行下载，浏览器对每个域的并行下载数量有一定的限制，一般是4-6个
 - 当然在这些所有的请求中我们还需要关注的就是缓存，缓存一般通过Cache-Control、Last-Modify、Expires等首部字段控制。Cache-Control和Expires的区别在于Cache-Control使用相对时间，Expires使用基于服务器端的绝对时间，因为存在时差问题，一般采用Cache-Control，在请求这些有设置了缓存的数据时，会先查看是否过期，如果没有过期则会直接使用本地缓存，过期则请求并在服务器校验文件是否修改，如果上一次响应设置了ETag值会在这次请求的时候作为If-None-Match的值交给服务器校验，如果一致，继续校验Last-Modified，没有设置ETag则直接验证Last-Modified，再决定是否返回304。
 
+简洁来说可以分为以下6个步骤：
+1. DNS解析
+2. TCP连接
+3. 发送HTTP请求
+4. 服务器处理请求并返回HTTP报文
+5. 浏览器解析渲染页面
+6. 连接结束
+
 ### 2. HTTP状态码
 - 200，OK，请求成功。一般用于GET与POST请求。
 - 201，Created，已创建。成功请求并创建了新的资源。
@@ -38,3 +46,24 @@
 - 503，Service Unavailable，由于超载或系统维护，服务器暂时无法处理客户端的请求。延时的长度可包含在服务器的Retry-After头信息中。
 - 504，Gateway Time-out，充当网关或代理的服务器，未及时从远端服务器获取请求。
 - 505,HTTP Version not supported，服务器不支持请求的HTTP协议的版本，无法完成处理。
+
+### 3. cookie和session的区别
+答：
+1. cookie数据存放在客户的浏览器上，session数据存放在服务器上。
+2. cookie不是很安全，别人可以分析存放在本地的cookie并进行cookie欺骗，考虑到安全应当使用session。
+3. session会在一定时间内保存在服务器上。当访问增多，会比较占用服务器的性能，考虑减轻服务器性能方面，应当使用COOKIE。
+4. 单个cookie保存的数据不能超过4K，很多浏览器都限制一个站点最多保存20个cookie。
+
+### 4. cookie有哪些字段可以设置
+- `name`字段为一个cookie的名称
+- value字段为一个cookie的值
+- domain字段为可以访问此cookie的域名。
+    - 非顶级域名，设置cookie的domain只能为顶级域名或者二级域名、三级域名本身，不能设置其他二级域名的cookie，否则无法生成。
+    - 顶级域名只能设置domain为顶级域名。
+    - 二级域名能读取设置domain为顶级域名或自身的cookie。所以想要cookie在多个二级域名中共享，需要设置domain为顶级域名。
+    - 顶级域名只能获取到domain设置为顶级域名的cookie。
+- path字段为可以访问此cookie的页面路径，比如domain是abc.com，path是/test，那么只有/test路径下的页面可以读取到此cookie。
+- expires/Max-Age字段为此cookie超时时间。若设置其值为一个时间，那么到达此时间后，此cookie失效。不设置的话默认值是Session，意思是cookie会和session一起失效。当浏览器关闭（不是浏览器标签页，而是整个浏览器），此cookie失效
+- Size字段，此cookie大小
+- http字段，cookie的httponly属性。若此属性为true，则只有在http请求头中会带有此cookie的信息，而不能通过document.cookie来访问此cookie。
+- secure字段，设置是否只能通过https来传递此条cookie。
